name:                simple-reflect
version:             0.2
homepage:            http://twan.home.fmf.nl/blog/haskell/simple-reflection-of-expressions.details
license:             BSD3
license-file:        LICENSE
author:              Twan van Laarhoven
maintainer:          twanvl@gmail.com
category:            Debug
cabal-version:       >= 1.2
build-type:          Simple
synopsis:            Simple reflection of expressions containing variables
description:
    This package allows simple reflection of expressions containing variables.
    Reflection here means that a Haskell expression is turned into a string.
    
    The primary aim of this package is teaching and understanding;
    there are no options for manipulating the reflected expressions beyond showing them.
build-depends:       base
exposed-modules:
    Debug.SimpleReflect
    Debug.SimpleReflect.Expr
    Debug.SimpleReflect.Vars
