name:                simple-reflect
version:             0.3.2
homepage:            http://twanvl.nl/blog/haskell/simple-reflection-of-expressions
license:             BSD3
license-file:        LICENSE
author:              Twan van Laarhoven
maintainer:          twanvl@gmail.com
bug-reports:         https://github.com/twanvl/simple-reflect/issues
category:            Debug
cabal-version:       >= 1.6
build-type:          Simple
synopsis:            Simple reflection of expressions containing variables
description:
    This package allows simple reflection of expressions containing variables.
    Reflection here means that a Haskell expression is turned into a string.
    
    The primary aim of this package is teaching and understanding;
    there are no options for manipulating the reflected expressions beyond showing them.

source-repository head
    type:     git
    location: http://github.com/twanvl/simple-reflect.git

Library
    build-depends:       base >= 2 && < 5
    exposed-modules:
        Debug.SimpleReflect
        Debug.SimpleReflect.Expr
        Debug.SimpleReflect.Vars
